signal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cli-rest-api
spec:
  selector:
    io.kompose.service: cli-rest-api
  ports:
    - name: web
      port: 8080
      targetPort: 8080
